--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "th-spectrum-chart",
+  "name": "lens-viz-spectrum-chart",
   "version": "0.0.0",
-  "keywords": "seed, polymer, web-components",
-  "main": "th-spectrum-chart.html",
+  "keywords": "lenses, polymer, web-components",
+  "main": "lens-viz-spectrum-chart.html",
   "dependencies": {
     "polymer": "Polymer/polymer#~0.5.1",
     "th-d3-chart": "https://github.com/thelmanews/th-d3-chart.git"
